tests/invalid/dict_magic_ror_wrong_arg_count/main.py
def run_case() -> None:
    d: dict[int, int] = {1: 10}
    out: dict[int, int] = d.__ror__()


if __name__ == "__main__":
    run_case()
